[project]
name = "patient-intake"
version = "0.1.0"
description = "Basic interactive chat interface for AI Patient Intake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-session>=0.8.0",
    "ollama>=0.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
